Update my about section to make it current.

--- a/main.mustache
+++ b/main.mustache
@@ -9,9 +9,14 @@
 </div>
 
 ## 💫About Me :
-- 🌱 I’m currently learning full-stack development at Microverse.
-- 💻 I'm passionate about web development and love building exciting projects.
-- 📚 In my free time, I enjoy reading interesting books and playing with my dog.
+- 🎓 I'm a graduate of Microverse, an online school for remote software developers.
+- 🌱 A Certified Full-Stack Developer, dedicated to refining my portfolio.
+- 🔭 I’m currently excitedly learning Vue.js, finding it as captivating as React.
+- 👯 Open to collaboration on any project.
+- 🤝 I’m actively seeking job opportunities where I can apply my skills for a positive impact.
+- 📚 In my free time, I immerse myself in captivating books and enjoy quality time with my canine companion.
+- 💬 Feel free to strike up a conversation about sports.
+- ⚡ Fun fact: I have a past life as a DJ and a history as a multi-sport athlete.
 
 ---
 
